--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <li>Docker: Curso legal</li>
         <li>Ansible</li>
         <li>Integração Contínua</li>
+	<li>Tudo bem?</li>
+	<li> SI </li>
     </ul>
 </body>
 </html>
