--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <ul>
-        <li>Docker: Curso legal</li>
+        <li> HAHA </li>
+	<li>Docker: Curso legal</li>
         <li>Ansible</li>
         <li>Integração Contínua</li>
 	<li>Tudo bem?</li>
