Revert "Alterando o código"
This reverts commit 0a81ac99b6ff8c589777a46f0b15e735a5881fce.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li> HAHA </li>
 	<li>Docker: Curso legal</li>
-        <li>Ansible: Seu código</li>
+        <li>Ansible</li>
         <li>Integração Contínua</li>
 	<li>Tudo bem?</li>
 	<li> SI </li>
