Alterando o nome do curo Kubernetes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li>Ansible</li>
         <li>Integração Contínua</li>
 	<li>Tudo bem?</li>
-	<li> SI </li>
+	<li> Kubernetes</li>
     </ul>
 </body>
 </html>
